# butlerclaw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASE_GUIDE.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  OPEN_SOURCE_READINESS.md  OpenClaw安装助手.spec  OpenClaw龙虾管家.spec  PROJECT_SUMMARY.md  README.md  SECURITY.md  TEST_REPORT.md  build_linux.sh  build_macos.sh  build_product.bat  build_windows.bat  check_open_source_status.py  clawhub_api.py  clawhub_integration_example.py  generate_cost_demo_data.py  hub_auth.py  hub_skills_api.py  init-web-project.sh  openclaw.example.json  openclaw_assistant.py  openclaw_installer.spec  openclaw_installer_linux.py  openclaw_installer_macos.py  openclaw_installer_v2.py  package.json  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  share_text.txt  skill_cache_manager.py  skills_manager.py  skills_panel_new.py  (+4 more)
.github/: COMMUNITY_GUIDELINES.md  pull_request_template.md
core/: README.md  __init__.py  cost_tracker.py  instance_manager.py  openclaw_gateway_client.py  remote_executor.py  team_collab.py
diagnose/: __init__.py  engine.py  health_score.py  models.py  smart_fix.py
docs/: API.md  API_KEY_SECURITY_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_v2.md  CHANGES_SUMMARY.md  COMMUNITY_SHARE.md  ClawHub_API_集成方案.md  DEPLOY_GUIDE.md  FEATURE_STATUS.md  INSTALLATION.md  MIGRATION_GUIDE.md  OPENCLAW_COMMUNITY_GUIDE.md  P0_FIX_COMPLETE.md  P0_FIX_REPORT.md  PRD_v2.md  PRODUCT_SOLUTION.md  UI_DESIGN_v2.md  USER_MANUAL.md  diagnose_design.md  skills_marketplace_design.md  优化方案_发现更多技能板块.md  优化方案_诊断工具与技能安装.md  优化模块使用指南.md  前端设计规范.md  功能设计及实现方案_安全与智能管理中心.md  可扩展方案.md  开发方案_PRD.md  打包说明.md  (+6 more)
(+73 files in other folders)
