[metadata]
name = butlerclaw
version = 2.0.1
description = Cross-platform desktop assistant for managing OpenClaw installations
long_description = file: README.md
long_description_content_type = text/markdown
author = Butlerclaw Contributors
author_email = support@butlerclaw.dev
url = https://github.com/yourusername/butlerclaw
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Utilities
    Topic :: System :: Installation/Setup
keywords = openclaw, installer, assistant, gui, tkinter

[options]
packages = find:
python_requires = >=3.8
install_requires =

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    flake8>=6.0.0
    black>=23.0.0
    mypy>=1.0.0

[options.entry_points]
console_scripts =
    butlerclaw = openclaw_assistant:main

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files =
    test_core_modules.py
    test_edge_cases.py
python_classes = Test*
python_functions = test_*

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
